// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PublicKudosSurface light-data storytelling > renders featured-absent and archive-absent narrative 1`] = `
<div>
  <section
    aria-label="HB Kudos"
    class="_section_fa79f5"
    data-hbc-webpart-section="hb-kudos-public-surface"
  >
    <div
      class="_hero_fa79f5"
      data-hbc-testid="hb-kudos-hero-zone"
    >
      <div
        class="_masthead_fa79f5"
        data-layout-mode="default"
      >
        <h2
          class="_title_fa79f5"
          data-hbc-testid="hb-kudos-hero-band"
        >
          <span
            aria-hidden="true"
            class="_titleIcon_fa79f5"
          >
            <svg
              class="lucide lucide-trophy"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.25"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"
              />
              <path
                d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"
              />
              <path
                d="M4 22h16"
              />
              <path
                d="M10 14.66V17c0 .55-.47.98-.97 1.21C7.85 18.75 7 20.24 7 22"
              />
              <path
                d="M14 14.66V17c0 .55.47.98.97 1.21C16.15 18.75 17 20.24 17 22"
              />
              <path
                d="M18 2H6v7a6 6 0 0 0 12 0V2Z"
              />
            </svg>
          </span>
          HB Kudos
        </h2>
        <button
          class="_giveBtn_fa79f5"
          data-hbc-testid="hb-kudos-give-trigger"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-sparkles"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2.25"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"
            />
            <path
              d="M20 3v4"
            />
            <path
              d="M22 5h-4"
            />
            <path
              d="M4 17v2"
            />
            <path
              d="M5 18H3"
            />
          </svg>
          Give Kudos
        </button>
      </div>
      <div
        class="___1vwhxxw_y73o0y0 f22iagw f1vx9l62 f122n59 f4d9j23 f17mccla f1io2m0y fa3goet fdgang7 f15kemlc f1choeao f1n1k3wd f1ynmbpn f4cll0y fq8omct"
        data-hbc-ui="empty-state"
      >
        <p
          class="___15p6st0_0000000 f1ooypgc fmrbgga f71fsbu f1v5tf16 ffkv7ec f19n0e5 f1s184ao"
        >
          No recognition yet
        </p>
        <p
          class="___144l38w_0000000 fmrbgga f11d4kpn f1s184ao f17dkswv"
        >
          Be the first to send kudos this week.
        </p>
      </div>
    </div>
    <section
      aria-labelledby="hb-kudos-pulse-title"
      data-hbc-testid="hb-kudos-pulse-section"
      data-hbc-webpart-section="hb-kudos-pulse"
    >
      <div
        class="_sectionHeader_fa79f5"
      >
        <div
          class="_sectionHeaderTop_fa79f5"
        >
          <span
            class="_sectionEyebrow_fa79f5"
          >
            Recognition pulse
          </span>
          <span
            class="_sectionMeta_fa79f5"
          >
            This week
          </span>
        </div>
        <h3
          class="_sectionTitle_fa79f5"
          id="hb-kudos-pulse-title"
        >
          Start this week at HB
        </h3>
      </div>
      <p
        class="_pulseEmpty_fa79f5"
      >
        No new recognition has landed yet this week.
      </p>
      <p
        class="_pulseStory_fa79f5"
      >
        The recognition board is open and ready for the first story.
      </p>
      <p
        class="_pulsePrompt_fa79f5"
      >
        Share one meaningful kudos to set the tone for the team.
      </p>
    </section>
  </section>
</div>
`;

exports[`PublicKudosSurface light-data storytelling > renders featured-absent and archive-exists narrative 1`] = `
<div>
  <section
    aria-label="HB Kudos"
    class="_section_fa79f5"
    data-hbc-webpart-section="hb-kudos-public-surface"
  >
    <div
      class="_hero_fa79f5"
      data-hbc-testid="hb-kudos-hero-zone"
    >
      <div
        class="_masthead_fa79f5"
        data-layout-mode="default"
      >
        <h2
          class="_title_fa79f5"
          data-hbc-testid="hb-kudos-hero-band"
        >
          <span
            aria-hidden="true"
            class="_titleIcon_fa79f5"
          >
            <svg
              class="lucide lucide-trophy"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.25"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"
              />
              <path
                d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"
              />
              <path
                d="M4 22h16"
              />
              <path
                d="M10 14.66V17c0 .55-.47.98-.97 1.21C7.85 18.75 7 20.24 7 22"
              />
              <path
                d="M14 14.66V17c0 .55.47.98.97 1.21C16.15 18.75 17 20.24 17 22"
              />
              <path
                d="M18 2H6v7a6 6 0 0 0 12 0V2Z"
              />
            </svg>
          </span>
          HB Kudos
        </h2>
        <button
          class="_giveBtn_fa79f5"
          data-hbc-testid="hb-kudos-give-trigger"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-sparkles"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2.25"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"
            />
            <path
              d="M20 3v4"
            />
            <path
              d="M22 5h-4"
            />
            <path
              d="M4 17v2"
            />
            <path
              d="M5 18H3"
            />
          </svg>
          Give Kudos
        </button>
      </div>
      <div
        class="___1vwhxxw_y73o0y0 f22iagw f1vx9l62 f122n59 f4d9j23 f17mccla f1io2m0y fa3goet fdgang7 f15kemlc f1choeao f1n1k3wd f1ynmbpn f4cll0y fq8omct"
        data-hbc-ui="empty-state"
      >
        <p
          class="___15p6st0_0000000 f1ooypgc fmrbgga f71fsbu f1v5tf16 ffkv7ec f19n0e5 f1s184ao"
        >
          No recognition yet
        </p>
        <p
          class="___144l38w_0000000 fmrbgga f11d4kpn f1s184ao f17dkswv"
        >
          Be the first to send kudos this week.
        </p>
      </div>
    </div>
    <section
      aria-labelledby="hb-kudos-pulse-title"
      data-hbc-testid="hb-kudos-pulse-section"
      data-hbc-webpart-section="hb-kudos-pulse"
    >
      <div
        class="_sectionHeader_fa79f5"
      >
        <div
          class="_sectionHeaderTop_fa79f5"
        >
          <span
            class="_sectionEyebrow_fa79f5"
          >
            Recognition pulse
          </span>
          <span
            class="_sectionMeta_fa79f5"
          >
            This week
          </span>
        </div>
        <h3
          class="_sectionTitle_fa79f5"
          id="hb-kudos-pulse-title"
        >
          This week is ready for its first spotlight
        </h3>
      </div>
      <p
        class="_pulseEmpty_fa79f5"
      >
        No new recognition has landed yet this week.
      </p>
      <p
        class="_pulseStory_fa79f5"
      >
        4 past recognitions are available in the archive while new kudos builds.
      </p>
      <p
        class="_pulsePrompt_fa79f5"
      >
        Use Give Kudos to start the next recognition moment on the homepage.
      </p>
    </section>
  </section>
</div>
`;

exports[`PublicKudosSurface light-data storytelling > renders featured-exists and recent-absent narrative 1`] = `
<div>
  <section
    aria-label="HB Kudos"
    class="_section_fa79f5"
    data-hbc-webpart-section="hb-kudos-public-surface"
  >
    <div
      class="_hero_fa79f5"
      data-hbc-testid="hb-kudos-hero-zone"
    >
      <div
        class="_masthead_fa79f5"
        data-layout-mode="default"
      >
        <h2
          class="_title_fa79f5"
          data-hbc-testid="hb-kudos-hero-band"
        >
          <span
            aria-hidden="true"
            class="_titleIcon_fa79f5"
          >
            <svg
              class="lucide lucide-trophy"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.25"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"
              />
              <path
                d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"
              />
              <path
                d="M4 22h16"
              />
              <path
                d="M10 14.66V17c0 .55-.47.98-.97 1.21C7.85 18.75 7 20.24 7 22"
              />
              <path
                d="M14 14.66V17c0 .55.47.98.97 1.21C16.15 18.75 17 20.24 17 22"
              />
              <path
                d="M18 2H6v7a6 6 0 0 0 12 0V2Z"
              />
            </svg>
          </span>
          HB Kudos
        </h2>
        <button
          class="_giveBtn_fa79f5"
          data-hbc-testid="hb-kudos-give-trigger"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-sparkles"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2.25"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"
            />
            <path
              d="M20 3v4"
            />
            <path
              d="M22 5h-4"
            />
            <path
              d="M4 17v2"
            />
            <path
              d="M5 18H3"
            />
          </svg>
          Give Kudos
        </button>
      </div>
      <article
        aria-labelledby="hb-kudos-featured-recipient-featured-only"
        class="_featured_fa79f5"
        data-hbc-testid="hb-kudos-featured-card"
        data-layout-mode="default"
      >
        <div
          class="_featuredTop_fa79f5"
        >
          <div
            class="_stack_7ad271 _stack_md_7ad271"
            data-hbc-presentation="avatar-stack"
          >
            <span
              class="_slot_7ad271"
              style="z-index: 1;"
            >
              <span
                aria-hidden="true"
                class="_avatar_7ad271 _fallback_7ad271 _size_md_7ad271"
              >
                RR
              </span>
            </span>
          </div>
          <div
            class="_featuredHeaderCluster_fa79f5"
          >
            <div
              class="_featuredHeader_fa79f5"
            >
              <h3
                class="_featuredRecipient_fa79f5"
                id="hb-kudos-featured-recipient-featured-only"
              >
                Ren Recipient
              </h3>
              <p
                class="_featuredHeadline_fa79f5"
              >
                Outstanding teamwork
              </p>
            </div>
            <span
              aria-label="Featured Recognition"
              class="_featuredBadge_fa79f5 _featuredBadgeSlot_fa79f5"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-sparkles"
                fill="none"
                height="11"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2.5"
                viewBox="0 0 24 24"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"
                />
                <path
                  d="M20 3v4"
                />
                <path
                  d="M22 5h-4"
                />
                <path
                  d="M4 17v2"
                />
                <path
                  d="M5 18H3"
                />
              </svg>
              Featured Recognition
            </span>
          </div>
        </div>
        <div
          class="_featuredBody_fa79f5"
        >
          <div
            class="_featuredExcerpt_fa79f5"
            data-hbc-testid="hb-kudos-featured-excerpt"
            id="hb-kudos-featured-excerpt-featured-only"
          >
            Great collaboration this week.
          </div>
        </div>
        <div
          class="_featuredFooter_fa79f5"
        >
          <span>
            Submitted by Sam Submitter
          </span>
          <button
            aria-label="Celebrate this recognition"
            class="_celebrateBtn_fa79f5"
            data-hbc-testid="hb-kudos-celebrate"
            type="button"
          >
            <span
              aria-hidden="true"
              class="_celebrateIcon_fa79f5"
            >
              <svg
                class="lucide lucide-thumbs-up"
                fill="none"
                height="13"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2.25"
                viewBox="0 0 24 24"
                width="13"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 10v12"
                />
                <path
                  d="M15 5.88 14 10h5.83a2 2 0 0 1 1.92 2.56l-2.33 8A2 2 0 0 1 17.5 22H4a2 2 0 0 1-2-2v-8a2 2 0 0 1 2-2h2.76a2 2 0 0 0 1.79-1.11L12 2a3.13 3.13 0 0 1 3 3.88Z"
                />
              </svg>
            </span>
            <span
              data-hbc-testid="hb-kudos-celebrate-count"
            >
              3
            </span>
          </button>
        </div>
      </article>
    </div>
    <section
      aria-labelledby="hb-kudos-pulse-title"
      data-hbc-testid="hb-kudos-pulse-section"
      data-hbc-webpart-section="hb-kudos-pulse"
    >
      <div
        class="_sectionHeader_fa79f5"
      >
        <div
          class="_sectionHeaderTop_fa79f5"
        >
          <span
            class="_sectionEyebrow_fa79f5"
          >
            Recognition pulse
          </span>
          <span
            class="_sectionMeta_fa79f5"
          >
            Updated Apr 20
          </span>
        </div>
        <h3
          class="_sectionTitle_fa79f5"
          id="hb-kudos-pulse-title"
        >
          No new recognition this week
        </h3>
      </div>
      <div
        class="_pulseStats_fa79f5"
      >
        <div
          class="_pulseStat_fa79f5"
        >
          <span
            class="_pulseStatValue_fa79f5"
          >
            1
          </span>
          <span
            class="_pulseStatLabel_fa79f5"
          >
            recognition
          </span>
        </div>
        <div
          class="_pulseStat_fa79f5"
        >
          <span
            class="_pulseStatValue_fa79f5"
          >
            1
          </span>
          <span
            class="_pulseStatLabel_fa79f5"
          >
            person recognized
          </span>
        </div>
        <div
          class="_pulseStat_fa79f5"
        >
          <span
            class="_pulseStatValue_fa79f5"
          >
            3
          </span>
          <span
            class="_pulseStatLabel_fa79f5"
          >
            celebrations
          </span>
        </div>
      </div>
      <p
        class="_pulseStory_fa79f5"
      >
        The current spotlight still reflects active appreciation from Apr 20.
      </p>
      <p
        class="_pulsePrompt_fa79f5"
      >
        Add one new kudos today to keep this week’s recognition story moving.
      </p>
    </section>
  </section>
</div>
`;
